--- a/static/carcassonne.css
+++ b/static/carcassonne.css
@@ -42,3 +42,11 @@
   height: 100%;
   width: 100%;
 }
+
+.can-place:hover {
+background-color: rgba(0, 255, 0, 0.4);
+}
+
+.cant-place:hover {
+background-color: rgba(255, 0, 0, 0.4);
+}
