--- a/static/carcassonne.css
+++ b/static/carcassonne.css
@@ -15,6 +15,7 @@
   align-content: center;
   align-items: center;
   flex: 1 1;
+  position: relative;
 }
 
 .tile:hover {
@@ -22,6 +23,15 @@
   background-image: var(--curr-tile-img);
   background-size: contain;
   cursor: pointer;
+}
+
+.meeple-container {
+  position: absolute;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  width: 100%;
+  height: 100%;
 }
 
 .current-turn {
