--- a/static/carcassonne.css
+++ b/static/carcassonne.css
@@ -33,6 +33,11 @@
   height: 100%;
 }
 
+.svg-container > svg {
+  width: 100%;
+  height: 100%;
+}
+
 .current-turn {
   position: fixed;
   right: 10vw;
